# wob

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  buffer.c  color.c  config.c  log.c  main.c  meson.build  meson_options.txt  options.c  parse.c  pledge.c  pledge_seccomp.c  test.c  wob.1.adoc  wob.1.scd  wob.c  wob.ini.5.scd  wob.spec
.github/workflows/: release.yml  test.yml
contrib/: README.md
contrib/systemd/: wob.service  wob.socket
etc/systemd/: README.md  wob.service.in  wob.socket
include/: buffer.h  color.h  config.h  image.h  log.h  options.h  parse.h  pledge.h
protocols/: wlr-layer-shell-unstable-v1.xml
src/: color.c  color.h  config.c  config.h  image.c  image.h  log.c  main.c  pledge_seccomp.c  shm.c  shm.h  wob.c  wob.h
systemd/: wob.service  wob.socket
test/: color_test.c
tests/: wob_parse_input.c  wob_poll_pollhup.c
